# autoTrader

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  CHANGELOG-risk-parameters.md  CLAUDE.md  CLEANUP_INVESTIGATION.md  CODEBASE_ANALYSIS.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  DATABASE_MIGRATION_STATUS.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_STEPS.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  LEARNING_CHECKLIST.md  LEARNING_DECISION_MATRIX.md  MIGRATION-REPORT.md  MIGRATION_AUDIT.md  MULTI_DEVICE_ANALYSIS.md  PLANNER_OPTIMIZATION_SUMMARY.md  README.md  REFACTORING_COMPLETE.md  UI_REFACTOR.md  docker-compose.yml  monitor_planner.sh  requirements.txt  tailwind.config.js  yfinance.service
app/: config.py  database.py  main.py
arduino-app/: README.md
contracts/: pyproject.toml  setup.py
contracts/arduino_trader_contracts.egg-info/: PKG-INFO  SOURCES.txt
contracts/contracts/: __init__.py  gateway_pb2.py  gateway_pb2_grpc.py  optimization_pb2.py  optimization_pb2_grpc.py  planning_pb2.py  planning_pb2_grpc.py  portfolio_pb2.py  portfolio_pb2_grpc.py  scoring_pb2.py  scoring_pb2_grpc.py  trading_pb2.py  trading_pb2_grpc.py  universe_pb2.py  universe_pb2_grpc.py
contracts/contracts/common/: common_pb2.py  position_pb2.py  position_pb2_grpc.py  security_pb2.py  security_pb2_grpc.py
contracts/protos/: gateway.proto  optimization.proto  planning.proto  portfolio.proto  scoring.proto  trading.proto  universe.proto
contracts/protos/common/: common.proto  position.proto  security.proto
deploy/: setup.sh
docs/: ARCHITECTURAL_ANALYSIS.md  DEPLOYMENT_RESTART_FIX.md  (+15 more)
(+932 files in other folders)
